--- a/12 Responses Three.ipynb
+++ b/12 Responses Three.ipynb
@@ -95,7 +95,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Showing the User ID and Metadata information\n",
+    "## Showing the User and Metadata information\n",
     "\n",
     "- **Streaming Real-Time Text Output:**  \n",
     "  The AI streams generated text incrementally, ideal for interactive or real-time applications (in this case, children's book content).\n",
